2008-07-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: Reset number of rows/columns if one of the
	dimensions given to Mat::set_size() is zero

	Without this patch, the Mat::set_size() function set number of
	rows or cols to non zero value, even if the other matrix
	dimension was zero. This was not compatible with the constructor.
	Besides, setting one of the dimensions of a matrix to non zero
	value, if the other one is zero does not makes sense and might
	cause problems with other functions operating on matrices. This
	patch fixes this problem.

2008-06-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/bch.cpp: Fix bug [1995743] in BCH::decode() function

	The second argument of
	  if ((delta == GF(n + 1, -1)) || (OldLambda.get_degree() > kk))
	takes the degree of OldLambda. But get_degree() does not return
	the true degree of that polynomial but its allocated space.
	GFX::get_true_degree() does what we want.

	If OldLambda's "degree" is larger than its "true degree", a wrong
	decision is made in the if statement, resulting in a wrong
	Lambda(x), which in general leads to a decoding failure, while the
	code word should have been correctable in theory.

	This patch fixes this bug and also removes a redundant "temp"
	variable.

	Signed-off-by: Stephan Ludwig <donludovico@users.sourceforge.net>

2008-06-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Add Stephan Ludwig (donludovico)
	to the list of contributors

	* itpp/comm/bch.cpp, itpp/comm/bch.h, tests/bch_test.cpp:
	Auto-calculate the BCH generator polynomial from (n, t) parameters

	This patch improves the previous patch, so only n (codeword
	length) and t (error-correcting capability) parameters are
	required to specify a particular BCH code. The generator
	polynomial and k (message word length) are calculated
	automatically.

	The new constructor does no longer break the implicit cast